--- a/package.json
+++ b/package.json
@@ -2,16 +2,7 @@
   "name": "webpack-config",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/webpack",
-    "deploy": "npm run build & surge dist",
-    "dev": "npm run start",
-    "postinstall": "npm run start",
-    "start": "node_modules/.bin/webpack-dev-server",
-    "start-env-example": "source ./.env || node_modules/.bin/webpack-dev-server"
-  },
+  "main": "webpack.config.js",
   "babel": {
     "presets": [
       "env",
