--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "github.com/ItsLeeOwen",
-  "name": "webpack-config",
+  "name": "webpack-config-starter",
   "version": "0.0.1",
   "description": "generic react es2017 webpack config",
   "main": "webpack.config.js",
@@ -30,6 +30,16 @@
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ItsLeeOwen/webpack-config.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ItsLeeOwen/webpack-config/issues"
+  },
+  "homepage": "https://github.com/ItsLeeOwen/webpack-config#readme"
 }
