--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hoek": "^5.0.3",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
