--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "description": "generic react es2017 webpack config",
   "main": "webpack.config.js",
   "license": "MIT",
+  "webpack": {
+    "entry": {
+      "index.html": "./src/index.html",
+      "index.js": "./src/index.js"
+    },
+    "env": {
+      "GREETING": "cześć"
+    }
+  },
   "dependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
-    "@babel/preset-es2017": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
     "ajv": "^6.8.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "hoek": "^6.1.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
@@ -32,7 +39,12 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node_modules/.bin/webpack",
+    "dev": "npm run start",
+    "postinstall": "npm run start",
+    "start": "node_modules/.bin/webpack-dev-server",
+    "start-env-example": "source ./.env || node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
