--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "ajv": "^6.8.1",
+    "ajv": "^6.9.1",
     "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "hoek": "^6.1.2",
@@ -53,7 +52,9 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "clean-webpack-plugin": "^1.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/.bin/webpack",
