--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "github.com/ItsLeeOwen",
   "name": "webpack-config-starter",
-  "version": "0.0.26",
+  "version": "0.0.25",
   "description": "generic react es2017 webpack config",
   "main": "webpack.config.js",
   "license": "MIT",
@@ -36,6 +36,8 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0-beta.2",
+    "@vue/babel-preset-jsx": "^1.0.0-beta.2",
     "ajv": "^6.9.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
@@ -50,6 +52,8 @@
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "style-loader": "^0.23.1",
+    "vue-loader": "^15.6.4",
+    "vue-template-compiler": "^2.6.6",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
